<?xml version="1.0"?>
<package format="2">
  <name>tapi_wrapper_spacenav</name>
  <version>1.2.1</version>
  <description>Wrapper to connect spacenav_node to Tapi</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="tobby@tobby.eu">tobby</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="repository">https://github.com/tobby88/ros-tapi-wrapper-spacenav</url>
  <url type="website">https://tobby88.github.io/ros-tapi-wrapper-spacenav/html/</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="tobby@tobby.eu">tobby</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>spacenav_node</exec_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tapi_lib</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
